--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -28,3 +28,9 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.container-fluid {
+  min-width: 1900px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
