--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -7,10 +7,13 @@
   bottom: 0;
   width: 100%;
   max-width: 694px;
+  max-height: 100%;
   background-color: #fff;
   padding-top: 40px;
+  padding-bottom: 40px;
   box-shadow: -1px 2px 20px 0px rgba($color: #000000, $alpha: 0.3);
   z-index: 100;
+  overflow-y: scroll;
   &__close {
     background-color: transparent;
     border: none;
