--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -7,12 +7,36 @@
   content: "";
   bottom: 0;
   left: 0;
-
   height: 1px;
   position: absolute;
   margin: 0 auto;
   background-color: #6d7278;
 }
 
+// vars
+
 $black: #363838;
 $default: #5a5a5a;
+
+// mixins
+$breakpoints: (
+  "phone": 400px,
+  "phone-wide": 480px,
+  "phablet": 560px,
+  "tablet-small": 640px,
+  "tablet": 768px,
+  "tablet-wide": 1024px,
+  "desktop": 1248px,
+  "desktop-wide": 1440px,
+);
+@mixin mq($width, $type: max) {
+  @if map_has_key($breakpoints, $width) {
+    $width: map_get($breakpoints, $width);
+    @if $type == max {
+      $width: $width - 1px;
+    }
+    @media only screen and (#{$type}-width: $width) {
+      @content;
+    }
+  }
+}
