--- a/src/components/ImageCollection/ImageCollection.scss
+++ b/src/components/ImageCollection/ImageCollection.scss
@@ -4,6 +4,12 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   column-gap: 30px;
+  padding-bottom: 70px;
+  &.small {
+    grid-template-columns: repeat(10, 1fr);
+    column-gap: 18px;
+    padding-bottom: 35px;
+  }
   &__item {
     position: relative;
     &:hover {
@@ -15,6 +21,9 @@
   &__images {
     min-height: 350px;
     object-fit: cover;
+    &.small {
+      min-height: 170px;
+    }
   }
   &__info {
     position: absolute;
@@ -42,6 +51,16 @@
     &::after {
       @extend %line;
       width: 80%;
+    }
+    &.small {
+      text-align: center;
+      font-size: 16px;
+      line-height: 22px;
+      padding-bottom: 0;
+      margin-bottom: 0;
+      &::after {
+        content: none;
+      }
     }
   }
   &__info-text {
